kk: Fix position of growl on mobile

--- a/src/style/_app-style.scss
+++ b/src/style/_app-style.scss
@@ -81,5 +81,6 @@ h6 {
 }
 
 .ui-growl{
+  position: absolute;
   z-index: 1050 !important;
 }
